--- a/public/css/core.css
+++ b/public/css/core.css
@@ -122,13 +122,14 @@ body {
     width: 100vw;
     z-index: 2;
     visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #title {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 80%;
+    text-align: center;
 }
 
 #titleImage {
@@ -151,6 +152,57 @@ body {
     border-radius: 4px;
     border: 4px solid #000000;
     outline: 2px solid #ffffff;
+}
+
+#gameSummaryContainer {
+    width: 100vw;
+    height: var(--app-height);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#gameSummary {
+    border-radius: 10px;
+    outline: 2px solid #ffffff;
+    width: 357px;
+}
+
+#gameSummary>div {
+    border-radius: 7px;
+    background-color: #000000;
+    padding: 12px;
+}
+
+#gameSummary>div>div {
+    border-radius: 7px;
+    height: 300px;
+    border: 10px solid #3dd6f5;
+    font-family: "Press Start 2P";
+    color: #ffffff;
+}
+
+#gameSummaryTitle {
+    font-size: 16pt;
+    background-color: #000000;
+    display: table;
+    margin: 0 auto;
+    margin-top: -14px;
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+#gameSummaryStats {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+    font-size: 10pt;
 }
 
 #logoContainer {
